Swagger test for comments and tasks
