# app/controllers/task_attachments_controller.rb
@@ -2,7 +2,7 @@ class TaskAttachmentsController < ApplicationController
   before_action :authorize_current_user
   before_action :authenticate_user!
 
-    def destroy
+    def destroy_attachment
       task = Task.find(params[:task_id])
       attachment = task.attachments.find(params[:id])
 
@@ -12,6 +12,7 @@ class TaskAttachmentsController < ApplicationController
     private
 
     def authorize_current_user
-      authorize current_user
+      task = Task.find(params[:task_id])
+      authorize task     
     end
 end
